<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myOrange"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="left"
            android:id="@+id/categories"
            android:paddingRight="70dp"
            android:paddingLeft="20dp"
            android:layout_margin="20dp"

            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="74dp"
                android:layout_height="49dp"
                android:contentDescription="@string/desc1"
                app:srcCompat="@drawable/categories"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="30dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/categories_text"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right"
            android:id="@+id/songs"
            android:layout_margin="20dp"
            >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="74dp"
                android:layout_height="49dp"
                android:contentDescription="@string/desc2"
                app:srcCompat="@drawable/songs"
                tools:layout_editor_absoluteX="291dp"
                tools:layout_editor_absoluteY="30dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/songs_text"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textSize="24sp"
            android:gravity="center"
            />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="201dp"
            android:layout_height="189dp"
            android:layout_gravity="center"
            android:layout_marginTop="19dp"
            app:srcCompat="@drawable/appicon" />
    </LinearLayout>


</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>